# pypack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yaml  python-app.yml
pypack/: __init__.py
tests/: __init__.py  test_pypack.py
