[tool.poetry]
name = "pypack"
version = "0.1.0"
description = "Python Package Starter Template."
authors = ["りーべ <liebe.magi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
single-source = "0.4.0"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pyproject-flake8 = "7.0.0"
flake8-isort = "6.1.1"
flake8-annotations = "3.1.1"
flake8-docstrings = "1.7.0"
mypy = "1.0"
pytest = "8.3.2"
pytest-sugar = "1.0.0"
pytest-cov = "5.0.0"
poethepoet = "0.27.0"
pre-commit = "3.8.0"

[tool.poe.env]
package = "pypack"

[tool.poe.tasks]
    [tool.poe.tasks.run]
    help = "Run Python"
    cmd = "python"
    [tool.poe.tasks.lint]
    help = "Run flake8 on the code base"
    sequence = [
        {cmd = "pflake8 ${package}/*.py tests/*.py"},
        {cmd = "mypy ${package}/*.py tests/*.py"},
    ]
    [tool.poe.tasks.fix]
    help = "Run black on the code base"
    cmd  = "black ${package}/*.py tests/*.py"
    [tool.poe.tasks.test]
    help = "Run unit and feature tests"
    cmd = "pytest -v --cov ${package} --cov-report term-missing"
    [tool.poe.tasks.init]
    help = "Initialize a project"
    sequence = [
        {cmd = "pre-commit install"}
    ]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,W503,W504,ANN101"
max-complexity = 10

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
